--- a/package.json
+++ b/package.json
@@ -102,13 +102,16 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "mocha": "^7.0.1",
+    "native-addon-loader": "^2.0.1",
     "node-gyp": "^6.1.0",
     "node-sass": "^4.12.0",
     "omit-deep-lodash": "1.1.4",
     "sass-lint": "^1.12.1",
+    "simple-functional-loader": "^1.2.1",
     "simple-progress-webpack-plugin": "^1.1.2",
     "sinon": "^9.0.2",
     "spectron": "^9.0.0",
+    "string-replace-loader": "^2.3.0",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
