--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
-    "bindings": "^1.3.0",
     "bluebird": "^3.7.2",
     "bootstrap-sass": "^3.3.6",
     "d3": "^4.13.0",
@@ -81,7 +80,6 @@
   },
   "devDependencies": {
     "@balena/lint": "^5.0.4",
-    "@types/bindings": "^1.3.0",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.7",
     "@types/mime-types": "^2.1.0",
@@ -116,7 +114,6 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-cli": "^3.3.9"
   }
 }
