--- a/package.json
+++ b/package.json
@@ -93,10 +93,13 @@
     "@types/tmp": "^0.2.0",
     "@types/webpack-node-externals": "^1.7.0",
     "chai": "^4.2.0",
+    "css-loader": "^3.5.3",
     "electron": "7.1.14",
     "electron-builder": "^22.1.0",
     "electron-mocha": "^8.2.0",
     "electron-notarize": "^0.3.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "mocha": "^7.0.1",
@@ -105,7 +108,6 @@
     "node-sass": "^4.12.0",
     "omit-deep-lodash": "1.1.4",
     "sass-lint": "^1.12.1",
-    "simple-functional-loader": "^1.2.1",
     "simple-progress-webpack-plugin": "^1.1.2",
     "sinon": "^9.0.2",
     "spectron": "^9.0.0",
